--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/new-logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/assets/new-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Primary Meta Tags -->
     <title>BiNNO | We bring platforms for startups.</title>
@@ -14,14 +14,14 @@
     <meta property="og:url" content="https://www.binnostartup.site/" />
     <meta property="og:title" content="BiNNO | We bring platforms for startups." />
     <meta property="og:description" content="We are BiNNO, a tech startup in Legazpi City, Albay that aims to develop a platform to boost the visibility of startups and enablers and increase awareness of startups to the general public." />
-    <meta property="og:image" content="/src/assets/thumbnail.png" />
+    <meta property="og:image" content="/thumbnail.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://www.binnostartup.site/" />
     <meta property="twitter:title" content="BiNNO | We bring platforms for startups." />
     <meta property="twitter:description" content="We are BiNNO, a tech startup in Legazpi City, Albay that aims to develop a platform to boost the visibility of startups and enablers and increase awareness of startups to the general public." />
-    <meta property="twitter:image" content="/src/assets/thumbnail.png" />
+    <meta property="twitter:image" content="/thumbnail.png" />
   </head>
   <body>
     <div id="root"></div>
